feat: refactor packages and responses