@@ -1,7 +1,7 @@
 package br.com.librigate.model.service.book;
 
+import br.com.librigate.dto.book.BookDTO;
 import br.com.librigate.exception.EntityNotFoundException;
-import br.com.librigate.dto.book.StockDTO;
 import br.com.librigate.dto.book.fisicalBook.CreateFisicalBookRequest;
 import br.com.librigate.dto.book.fisicalBook.UpdateFisicalBookRequest;
 import br.com.librigate.model.entity.book.FisicalBook;
@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FisicalBookService implements IFisicalBookService {
@@ -94,25 +93,15 @@ public class FisicalBookService implements IFisicalBookService {
         try {
             var entityList = fisicalBookRepository.findAll();
 
-            var stockMap = entityList.stream()
-                    .collect(Collectors.groupingBy(
-                            book -> book.getBook().getIsbn(),
-                            Collectors.counting()
-                    ));
-
-            var stockList = stockMap.entrySet().stream()
-                    .map(entry -> {
-                        var book = entityList.stream()
-                                .filter(b -> b.getBook().getIsbn().equals(entry.getKey()))
-                                .findFirst()
-                                .orElseThrow(() -> new EntityNotFoundException("Fisical Book not found"));
-                        return new StockDTO(
-                                entry.getKey(),
-                                book.getBook().getTitle(),
-                                entry.getValue().intValue()
-                        );
-                    })
-                    .collect(Collectors.toList());
+            var stockList = entityList.stream()
+                    .map(fisicalBook -> BookDTO.builder()
+                                .isbn(fisicalBook.getBook().getIsbn())
+                                .title(fisicalBook.getBook().getTitle())
+                                .quantity(fisicalBookRepository.countByIsbn(fisicalBook
+                                        .getBook()
+                                        .getIsbn()))
+                    )
+                    .toList();
 
             if (stockList.isEmpty())
                 return new ResponseEntity<>(stockList, HttpStatus.NOT_FOUND);
@@ -132,13 +121,13 @@ public class FisicalBookService implements IFisicalBookService {
             var stock = entityList.stream()
                     .filter(book -> book.getBook().getIsbn().equals(isbn))
                     .findFirst()
-                    .map(book -> new StockDTO(
-                            book.getBook().getIsbn(),
-                            book.getBook().getTitle(),
-                            (int) entityList.stream()
-                                    .filter(b -> b.getBook().getIsbn().equals(isbn))
-                                    .count()
-                    ))
+                    .map(fisicalBook -> BookDTO.builder()
+                            .isbn(fisicalBook.getBook().getIsbn())
+                            .title(fisicalBook.getBook().getTitle())
+                            .quantity(fisicalBookRepository.countByIsbn(fisicalBook
+                                    .getBook()
+                                    .getIsbn()))
+                    )
                     .orElseThrow(() -> new EntityNotFoundException("Fisical Book not found"));
 
             return new ResponseEntity<>(stock, HttpStatus.OK);
